# CodeName

./: .gitignore  CMakeLists.txt  README.md  main.cpp  readme.md  todo.md
modules/chatroom/include/: chat_text.h  chatroom.h  chattextedit.h
modules/chatroom/src/: chatroom.cpp  chattextedit.cpp
modules/chatroom/ui/: chatroom.ui
modules/game_controller/include/: game_controller.h
modules/game_controller/src/: game_controller.cpp
modules/game_core/include/: candidate_words.h  card_color.h  card_info.h  game_core.h  game_operation.h  game_state.h
modules/game_core/src/: game_core.cpp  game_state.cpp
modules/game_screen/include/: code_card.h  game_screen.h
modules/game_screen/src/: code_card.cpp  game_screen.cpp
modules/game_screen/ui/: game_screen.ui
modules/mainwindow/include/: mainwindow.h
modules/mainwindow/src/: mainwindow.cpp
modules/mainwindow/ui/: mainwindow.ui
modules/message_system/include/: chat_message.h  game_message.h  message.h  message_processer.h  system_message.h
modules/message_system/src/: chat_message.cpp  game_message.cpp  message_processer.cpp  system_message.cpp
modules/network_data_manager/include/: network_data_factory.h  network_data_manager.h
modules/network_data_manager/src/: network_data_manager.cpp
modules/network_data_manager_client/include/: network_data_manager_client.h
modules/network_data_manager_client/src/: network_data_manager_client.cpp
modules/network_data_manager_server/include/: network_data_manager_server.h
modules/network_data_manager_server/src/: network_data_manager_server.cpp
modules/network_utils/include/: user.h
modules/network_utils/src/: user.cpp
modules/utils/include/: color.h
modules/utils/src/: color.cpp
resources/: darktheme.qss  lofitheme.qss  resources.qrc
